[project]
name = "pythonproject5"
version = "0.1.0"
description = ""
authors = [
    {name = "Inna",email = "MenelN@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chandler-reportplugin (>=0.1,<0.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
flake8 = "^7.3.0"
mypy = "^1.18.2"
pytest = "^8.4.2"
isort = "^6.0.1"
coverage = "^7.10.6"

[tool.black]
line-length = 119
exclude = '''
/(
    \.git
)/
'''

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = '.venv'